test/mason/mason-test/mason-test.good
Updating registry
Downloading dependency: _MasonTest1-0.2.0

======================================================================
ERROR compileerror.chpl: compileerror
----------------------------------------------------------------------
compileerror failed to compile
======================================================================
FAIL shallnotpass.chpl: shallnotpass
----------------------------------------------------------------------
shallnotpass returned exitCode = 255
----------------------------------------------------------------------
Ran 8 tests in n seconds

FAILED (passed = 6 failures = 1 errors = 1 )
PATH/compileerror.chpl:1: syntax error: near 'test'
compilation failed for compileerror.chpl
