test/mason/mason-test/mason-test.prediff
#!/usr/bin/env python
import sys, re, shutil

test_name = sys.argv[1]
out_file  = sys.argv[2]
tmp_file  = out_file + ".prediff.tmp"
with open(tmp_file, 'w') as tf:
  with open(out_file) as outf:
      for line in outf:
        line = re.sub(r'[0-9]+([.][0-9]+)? seconds', 'n seconds', line)
        if '/compileerror.chpl:' in line:
          pos = line.find('/compileerror.chpl:')
          line = 'PATH' + line[pos:]
        tf.write(line)

shutil.move(tmp_file, out_file)

